# tucanos

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  perf.data  perf.data.old  plot_qualities.py  pyproject.toml  setup.py  sphere_0.vtu  sphere_1.vtu  sphere_2.vtu  test.vtu  test_bdy.vtu  test_scipy.py
.github/: dependabot.yml
.github/workflows/: build.yml  rust.yml  test.yml
.ipynb_checkpoints/: test-checkpoint.ipynb
_custom_build/: backend.py
benchmarks/: run_all.sh
benchmarks/cube_cylinder/: README.md  cube-cylinder-boundary.geo  cube-cylinder.geo  run_test.py
benchmarks/cube_iso/: run_test.py
benchmarks/cube_linear/: README.md  run_test.py
benchmarks/square_iso/: README.md  run_test.py
benchmarks/square_linear/: README.md  run_test.py
data/: 1triangle_2nd_order_ansa_bezier_control_pts_over_geom-dist.sol  1triangle_2nd_order_ansa_bezier_control_pts_over_geom.mesh  P1SolAtVertices.sol  TriangleP2.mesh  simple3d.meshb
examples/: Cargo.toml  example_2d.py  example_2d_aniso.py  example_2d_hessian.py  example_2d_implied.py  example_2d_naca.py  example_2d_parallel.py
examples/adapt_ellipse/: ellipse.rs  main.rs
examples/dual_mesh_2d/: Cargo.toml
pysmesh/: Cargo.toml
pysmesh/pysmesh/: __init__.py  test_dual.py  test_mesh.py
pysmesh/src/: dual.rs  lib.rs  mesh.rs
pytmesh/: Cargo.toml  pyproject.toml  setup.py
pytmesh/_custom_build/: backend.py
pytmesh/pytmesh/: __init__.py  cgns_io.py  test_dual.py  test_extruded.py  test_mesh.py
pytmesh/src/: dual.rs  extruded.rs  lib.rs  mesh.rs  poly.rs
pytucanos/: Cargo.toml  README.md  __init__.py  build.rs  cgns_io.py  edges.py  field.py  geometry.py  mesh.py  metric.py  quality.py  remesh.py  setup.py  test_field.py  test_geometry.py  test_mesh.py  test_remesh.py
pytucanos/_custom_build/: backend.py
pytucanos/benchmarks/: Dockerfile
pytucanos/benchmarks/cube_cylinder/: run_test.py
pytucanos/benchmarks/cube_iso/: README.md  run_test.py
pytucanos/benchmarks/cube_linear/: run_test.py
pytucanos/benchmarks/square_iso/: README.md  run_test.py
pytucanos/benchmarks/square_linear/: run_test.py
pytucanos/examples/: example_2d.py  example_2d_aniso.py  example_2d_hessian.py  example_2d_implied.py  example_2d_naca.py  example_2d_parallel.py
pytucanos/pytucanos/: __init__.py  cgns_io.py  edges.py  geometry.py  mesh.py  metric.py  quality.py  remesh.py  test_autotag.py  test_dual.py  test_field.py  test_geometry.py  test_mesh.py  test_remesh.py  test_solb.py
pytucanos/src/: autotag.rs  dual.rs  extruded.rs  geometry.rs  lib.rs  mesh.rs  metric.rs  parallel.rs  poly.rs  remesher.rs
src/: boundary_mesh_2d.rs  boundary_mesh_3d.rs  cavity.rs  curvature.rs  debug_from_meshb.rs  domain_decomposition.rs  dual_mesh.rs  dual_mesh_2d.rs  dual_mesh_3d.rs  extruded.rs  geom_elems.rs  geometry.rs  graph.rs  lib.rs  libmeshb_io.rs  libol.rs  linalg.rs  mesh.rs  mesh_2d.rs  mesh_3d.rs  mesh_autotag.rs  mesh_interpolate.rs  mesh_l2proj.rs  mesh_ls.rs  mesh_metric.rs  mesh_ordering.rs  mesh_partition.rs  mesh_split.rs  mesh_stl.rs  mesh_vtk.rs  mesh_xdmf.rs  meshb_io.rs  metric.rs  metric_reduction.rs  multi_element_mesh.rs  octree.rs  parallel.rs  poly_mesh.rs  remesher.rs  simplices.rs  (+12 more)
src/geometry/: curvature.rs  mod.rs  orient.rs  quadratic_mesh.rs
src/mesh/: autotag.rs  geom_elems.rs  geom_quad_elems.rs  geom_quadratic_elems.rs  gradient_l2proj.rs  gradient_ls.rs  graph.rs  interpolate.rs  mod.rs  ordering.rs  partition.rs  quadratic_mesh.rs  simplex_mesh.rs  split.rs  test_meshes.rs  tmesh.rs  to_simplices.rs  topo_elems.rs  topo_elems_quadratic.rs  topology.rs  vector.rs
src/metric/: complexity.rs  compute_metric.rs  curvature.rs  gradation.rs  (+4 more)
tmesh/: Cargo.toml  README.md
tmesh/examples/: Cargo.toml
tmesh/examples/dual_mesh_2d/: main.rs
tmesh/examples/dual_mesh_2d/src/: main.rs
tmesh/examples/dual_mesh_3d/: main.rs
tmesh/examples/partition_3d/: main.rs
tmesh/src/: boundary_mesh_3d.rs  dual_mesh.rs  dual_mesh_2d.rs  graph.rs  least_squares.rs  lib.rs  poly_mesh.rs  simplices.rs  vtu_output.rs
tmesh/src/deform/: mod.rs
tmesh/src/dual/: dual_mesh.rs  dual_mesh_2d.rs  dual_mesh_3d.rs  mod.rs  poly_mesh.rs
tmesh/src/extruded/: mod.rs
tmesh/src/graph/: mod.rs
tmesh/src/interpolate/: mod.rs
tmesh/src/io/: mod.rs  vtu_output.rs
tmesh/src/mesh/: boundary_mesh_2d.rs  boundary_mesh_3d.rs  hilbert.rs  least_squares.rs  mesh_2d.rs  mesh_3d.rs  mod.rs  partition.rs  simplices.rs  split.rs  to_quadratic.rs  to_simplices.rs  twovec.rs  vector.rs
tmesh/src/mesh/elements/: edge.rs  ho_simplex.rs  mod.rs  newton.rs  newton_cg.rs  node.rs  quadratic_edge.rs  quadratic_tetrahedron.rs  quadratic_triangle.rs  quadratures.rs  simplex.rs  tetrahedron.rs  to_simplices.rs  triangle.rs  twovec.rs
tmesh/src/mesh/gradient/: l2proj.rs  least_squares.rs  mod.rs
tmesh/src/spatialindex/: mod.rs  parry.rs  parry2.rs  parry_2d.rs  parry_3d.rs
tucanos/: Cargo.toml  build.rs  katex.html  topology.md
tucanos-ffi/: Cargo.toml  build.rs
tucanos-ffi-test/: Cargo.toml  build.rs
tucanos-ffi-test/src/: lib.rs
tucanos-ffi-test/tests/: test.rs  test2d.rs
tucanos-ffi/src/: ffi2d.rs  lib.rs
tucanos/examples/adapt_ellipse/: ellipse.rs  main.rs
tucanos/examples/cube_cylinder/: main.rs
tucanos/src/: lib.rs
tucanos/src/geometry/: curvature.rs  mod.rs  orient.rs
tucanos/src/mesh/: autotag.rs  geom_elems.rs  gradient_l2proj.rs  gradient_ls.rs  graph.rs  mod.rs  ordering.rs  partition.rs  simplex_mesh.rs  split.rs  test_meshes.rs  tmesh.rs  to_simplices.rs  topo_elems.rs  topology.rs  vector.rs
tucanos/src/mesh/io/: mesh_vtk.rs  mod.rs  stl_io.rs
tucanos/src/metric/: aniso.rs  complexity.rs  curvature.rs  gradation.rs  implied.rs  iso.rs  mod.rs  scaling.rs  smoothing.rs
tucanos/src/metric/field/: complexity.rs  curvature.rs  gradation.rs  implied.rs  mod.rs  scaling.rs  smoothing.rs
tucanos/src/remesher/: cavity.rs  collapse.rs  cost_estimator.rs  mod.rs  orderedhashmap.rs  parallel.rs  sequential.rs  smooth.rs  split.rs  stats.rs  swap.rs
tucanos/src/spatialindex/: parry.rs
(+18 files in other folders)
