[package]
name = "pytmesh"
version = "0.1.0"
edition = "2024"

[lib]
name = "pytmesh"
crate-type = ["lib", "cdylib"]

[dependencies]
log = "0.4.27"
tmesh = { path="../tmesh" }
numpy = "0.26.0"
pyo3 = { version = "0.25.0", features = ["extension-module", "multiple-pymethods"] }
pyo3-log = "0.12"

[features]
32bit-tags = ["tmesh/32bit-tags"]
64bit-tags = ["tmesh/64bit-tags"]
metis = ["tmesh/metis"]


[lints]
workspace = true