[package]
name = "pytucanos"
version = "0.4.0"
edition.workspace = true

[lib]
name = "pytucanos"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.27"
tucanos = { path="../tucanos" }
numpy = "0.28.0"
pyo3 = { version = "0.28.1", features = ["extension-module", "multiple-pymethods"] }
pyo3-log = "0.13.3"
rayon = "1.10.0"
affinity = "0.1.2"
tmesh = { path = "../tmesh" }

[features]
32bit-ints = []
metis = ["tucanos/metis"]

[lints]
workspace = true
