[package]
name = "pytucanos"
version = "0.4.0"
edition.workspace = true

[lib]
name = "pytucanos"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.27"
tucanos = { path="../tucanos" }
numpy = "0.28.0"
pyo3 = { version = "0.28.2", features = ["extension-module", "multiple-pymethods"] }
pyo3-log = "0.13.3"
rayon = "1.10.0"
affinity = "0.1.2"
tmesh = { path = "../tmesh" }
libm = "0.2.15"
shadow-rs = "1.7.1"
minimeshb = { git = "https://github.com/tucanos/minimeshb.git", rev = "230d45dc" }

[build-dependencies]
shadow-rs = "1.7.1"

[features]
32bit-ints = []
metis = ["tucanos/metis"]

[lints]
workspace = true
