[package]
name = "pytucanos"
version.workspace = true
edition.workspace = true

[lib]
name = "pytucanos"
crate-type = ["cdylib"]

[dependencies]
log.workspace = true
tucanos = { path="../tucanos" }
numpy = "0.28.0"
pyo3 = { version = "0.28.3", features = ["extension-module", "multiple-pymethods"] }
pyo3-log = "0.13.3"
rayon.workspace = true
affinity = "0.1.2"
tmesh = { path = "../tmesh" }
libm.workspace = true
shadow-rs = "2.0.0"
minimeshb.workspace = true

[build-dependencies]
shadow-rs = "2.0.0"

[features]
32bit-ints = []
metis = ["tucanos/metis"]

[lints]
workspace = true
