[package]
name = "tmesh"
version = "0.3.0"
edition.workspace = true

[dependencies]
log = "0.4.27"
minimeshb = { git = "https://github.com/tucanos/minimeshb.git", rev = "3b1086a" }
nalgebra = { version = "0.34.0"}
rand = "0.10.0"
rayon = "1.10.0"
rustc-hash = "2.1.1"
kdtree = { version = "0.8" }
parry3d-f64 = { version = "0.26.0" }
parry2d-f64 = { version = "0.26.0" }
coupe = { git = "https://github.com/LIHPC-Computational-Geometry/coupe.git", rev = "20f0de6" }
metis = { git = "https://github.com/tucanos/metis-rs.git", rev = "d31aa3e", optional=true}
lindel = "0.1.1"
stl_io = "0.10.0"
env_logger = "0.11.8"
argmin = {git = "https://github.com/tucanos/argmin.git", branch = "xg/dev"}
argmin-math = {git = "https://github.com/tucanos/argmin.git", branch = "xg/dev", features = ["nalgebra_latest"] }
argmin-observer-slog = "0.2.0"

[features]
32bit-tags = []
64bit-tags = []

[lints]
workspace = true

[[example]]
name = "dual_mesh_2d"

[[example]]
name = "partition_3d"

[[example]]
name = "dual_mesh_3d"
