[package]
name = "tmesh"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
minimeshb.workspace = true
nalgebra.workspace = true
rand.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
kdtree = { version = "0.8" }
parry3d-f64 = { version = "0.28.0" }
parry2d-f64 = { version = "0.28.0" }
coupe = { git = "https://github.com/LIHPC-Computational-Geometry/coupe.git", rev = "20f0de6" }
metis = { git = "https://github.com/tucanos/metis-rs.git", rev = "d31aa3e", optional=true}
lindel = "0.1.1"
stl_io = "0.11.0"
env_logger = "0.11.10"
argmin = { git = "https://github.com/tucanos/argmin.git", tag = "tucanos-0.4.0" }
argmin-math = { git = "https://github.com/tucanos/argmin.git", tag = "tucanos-0.4.0", features = [
    "nalgebra_latest",
] }
argmin-observer-slog = "0.2.0"
libm.workspace = true

[features]
32bit-tags = []
64bit-tags = []

[lints]
workspace = true

[[example]]
name = "dual_mesh_2d"

[[example]]
name = "partition_3d"

[[example]]
name = "dual_mesh_3d"
