[package]
name = "tucanos-ffi"
version = "0.1.0"
edition = "2021"
description = "C / FFI wrapper for the Tucanos mesher"

[lib]
name = "tucanos"
crate-type = ["cdylib"]

[dependencies]
tucanos = { path = ".." }
log = "0.4.22"

[build-dependencies]
cbindgen = "0.29"

[lints]
workspace = true

[features]
32bit-tags = ["tucanos/32bit-tags"]
64bit-tags = ["tucanos/64bit-tags"]
