[package]
name = "tucanos-ffi"
version.workspace = true
edition.workspace = true
description = "C / FFI wrapper for the Tucanos mesher"

[lib]
name = "tucanos"
crate-type = ["cdylib"]
doc = false

[dependencies]
tmesh = {path = "../tmesh" }
tucanos = { path = "../tucanos" }
log.workspace = true

[build-dependencies]
cbindgen = "0.29"

[features]
32bit-ints = []
32bit-tags = ["tmesh/32bit-tags", "tucanos/32bit-tags"]
64bit-tags = ["tmesh/64bit-tags", "tucanos/64bit-tags"]

[lints]
workspace = true
