[package]
name = "tucanos"
version = "0.3.0"
edition.workspace = true
links = "tucanos"

[dependencies]
nalgebra = { version = "0.34.1", features = ["rand"] }
log = "0.4.22"
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
rustc-hash = "2.0.0"
sorted-vec = "0.8.6"
rand = "0.9.1"
rayon = "1.11.0"
typenum = { version ="1.19.0", features = ["const-generics"] }
num = "0.4.3"
tempfile = "3.22.0"
tmesh = {path = "../tmesh"}

[features]
32bit-tags = ["tmesh/32bit-tags"]
64bit-tags = ["tmesh/64bit-tags"]
metis = ["tmesh/metis"]
trace_edges = []

[[example]]
name = "adapt_ellipse"

[lints]
workspace = true
