[package]
name = "tucanos"
version.workspace = true
edition.workspace = true
links = "tucanos"

[dependencies]
nalgebra = { workspace = true, features = ["rand"] }
log.workspace = true
serde_json = "1.0.149"
serde = { version = "1.0.225", features = ["derive"] }
rustc-hash.workspace = true
sorted-vec = "0.8.6"
rand.workspace = true
rayon.workspace = true
typenum = { version ="1.19.0", features = ["const-generics"] }
num = "0.4.3"
tmesh = {path = "../tmesh"}
libm.workspace = true

[features]
32bit-tags = ["tmesh/32bit-tags"]
64bit-tags = ["tmesh/64bit-tags"]
metis = ["tmesh/metis"]
trace_edges = []

[[example]]
name = "adapt_ellipse"

[[example]]
name = "cube_cylinder"

[lints]
workspace = true
